# rust-101

merkle_tree/: Cargo.toml
merkle_tree/src/: lib.rs  smt.rs
